# transbot-sdk

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
example/: test
example/src/: main.cpp  test.cpp
include/: data.hpp  transbot_sdk.hpp
include/hardware/: hardware_interface.hpp  serial_device.hpp
include/protocol/: packages.hpp
include/transbot_sdk/: data.hpp  transbot_sdk.hpp
python/: main.py
src/: transbot_sdk.cpp
src/hardware/: hardware_interface.hpp  serial_device.cpp  serial_device.hpp
src/protocol/: circular_buffer.hpp  memory_pool.cpp  memory_pool.hpp  package.cpp  package.hpp  packages.hpp  protocol.cpp  protocol.hpp
